# saturn

./: CMakeLists.txt  Makefile  README.md  bitrw.hpp  book.cpp  book.hpp  cli.cpp  cli.hpp  compile_flags.txt  config.hpp  default.nnue  evalcache.hpp  history.hpp  main.cpp  movepicker.cpp  movepicker.hpp  pack.cpp  pack.hpp  parameters.cpp  parameters.hpp  parse_helpers.hpp  perft.cpp  perft.hpp  scout.hpp  search_stack.hpp  searchstack.cpp  searchstack.hpp  selfplay.cpp  selfplay.hpp  timer.hpp  tree.cpp  tree.hpp  tt.cpp  tt.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
board/: board.cpp  board.hpp  board_moves.cpp  load_fen.cpp  ok_capture.cpp  parse.cpp  see.cpp  validate.cpp
core/: defer.cpp  defer.hpp  engine.cpp  engine.hpp  eval.cpp  eval.hpp  quiesce.cpp  routine.hpp  search.cpp  search.hpp  search_broken.cpp  search_broken.hpp  search_common.hpp  search_impl.cpp  searchworker.cpp  searchworker.hpp
learn/: evalbook.cpp  evalbook.hpp
mininnue/: ftset.hpp  layers.hpp  nnue.cpp  nnue.hpp  simd.hpp  state.hpp
movgen/: attack.cpp  attack.hpp  generate.cpp  generate.hpp  magic.cpp  magics.hpp
nnue/: accumulator.hpp  crelu.hpp  evaluate.cpp  evaluate.hpp  halfkp.hpp  linear.hpp  network.hpp  nnarch.hpp  nnue.cpp  nnue_misc.hpp  nnue_state.hpp  ops.hpp  simd.hpp  state.hpp  transformer.hpp
primitives/: bitboard.hpp  common.hpp  utility.cpp  utility.hpp
progress/: format.md  progress.md
progress/1_negamax/: mate2.txt
progress/2_ab_staged/: mate2_mdp_evade_d2.txt  mate2_mdp_evade_d3.txt  mate2_nosee.txt  mate2_see.txt  qnosee.txt  qsee.txt  wac_mdp_evade_d2.txt  wac_mdp_evade_d3.txt  wac_mdp_evade_d4.txt
progress/3_ab_tt/: m2_nottm.txt  m2_ttm.txt  wac_iid3_d4.txt  wac_nottm_d4.txt  wac_ttm_d4.txt
progress/4_ab_id/: mate2_100ms.txt  wac_id_200ms.txt
progress/5_asp_root_ord/: mate2_100ms.txt  wac_200ms.txt
progress/6_mvvlva_killers_psqt/: mate2_100ms.txt  wac_1000ms.txt  wac_200ms.txt  wac_fixed_1000ms.txt
progress/7_nmp/: wac_200ms.txt  wac_fixed_1000ms.txt
search/: search.cpp  search.hpp  search_common.hpp  searchworker.cpp  searchworker.hpp
testing/: run_testsuite.py
testing/testsuites/: mate2.epd  wac_fixed.epd
